--- a/src/assets/style/public.less
+++ b/src/assets/style/public.less
@@ -7,7 +7,8 @@
 
 @successColor: #19be6b; // 成功颜色
 @redColor: #ed4014; // 红色
-@blueColor: #5cadff; // 
+@blueColor: #5cadff; //
+@orangeColor: #E6A23C; //
 
 // 公共按钮样式
 .mainButton {
@@ -22,10 +23,10 @@
   font-size: 14px;
   background: @mainColor;
   opacity: 1;
-  transition: opacity linear .25s;
-  &:hover{
-    transition: opacity linear .25s;
-    opacity: .8;
+  transition: opacity linear 0.25s;
+  &:hover {
+    transition: opacity linear 0.25s;
+    opacity: 0.8;
   }
 }
 .mainButton.success {
@@ -36,13 +37,18 @@
 }
 .mainButton.disabled {
   background: @Invalid;
-  // cursor: not-allowed;
+}
+.mainButton.warning {
+  background: @orangeColor;
+}
+.notAllowed {
+  cursor: not-allowed;
 }
 
 a {
   text-decoration: none;
 }
-li{
+li {
   list-style-type: none;
 }
 
@@ -52,4 +58,11 @@ li{
   padding-left: 15px;
   border-left: 4px solid @successColor;
   line-height: 1;
+}
+// 不可选中
+.notSelect {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
