--- a/src/assets/style/components.less
+++ b/src/assets/style/components.less
@@ -1,48 +1,105 @@
 // 所有组件 样式所在（load,message 除外）
 
 // 表情包弹框 样式
-#self-faceBao-box{
-    padding: 10px;
+#self-faceBao-box {
+  padding: 10px;
+  background: #ffffff;
+  // background: blue;
+  position: fixed;
+  z-index: 1001;
+  border: 1px solid @borderColor;
+  border-radius: 4px;
+  height: 200px;
+  // box-sizing: border-box;
+  // overflow-y: auto;
+  &::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid @borderColor;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -10px;
+    margin-top: -20px;
+  }
+  ul {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    // display: flex;
+    // flex-wrap: wrap;
+    li {
+      width: 20%;
+      height: 50px;
+      float: left;
+      text-align: center;
+      margin-bottom: 5px;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+// 确认框
+#self-confirm-box {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  .confirm-center-box {
+    width: 100%;
+    max-width: 350px;
     background: #ffffff;
-    // background: blue;
-    position: fixed;
-    z-index: 1001;
-    border: 1px solid @borderColor;
     border-radius: 4px;
-    height: 200px;
-    // box-sizing: border-box;
-    // overflow-y: auto; 
-    &::after{
-        content:'';
-        width:0;
-        height: 0;
-        border-left: 10px solid transparent;   
-        border-right: 10px solid transparent;   
-        border-top: 10px solid transparent;   
-        border-bottom: 10px solid @borderColor;   
-        position: absolute;
-        top: 0;
-        left: 50%;
-        margin-left: -10px;
-        margin-top: -20px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    .confirm-center-title {
+      font-size: 18px;
+      color: @mainColor;
+      padding: 10px;
     }
-    ul{
-        width: 100%;
-        height: 100%;
-        overflow-y: auto;
-        // display: flex;
-        // flex-wrap: wrap;
-        li{
-            width: 20%;
-            height: 50px;
-            float: left;
-            text-align: center;
-            margin-bottom: 5px;
-            img{
-                max-width: 100%;
-                max-height: 100%;
-                cursor: pointer;
-            }
+    .confirm-center-content {
+      color: @mainColor2;
+      font-size: 14px;
+      padding: 10px;
+    }
+    .confirm-center-footer {
+      color: @mainColor2;
+      font-size: 14px;
+      padding: 10px;
+      text-align: right;
+      button {
+        border: none;
+        padding: 10px 22px;
+        margin-left: 20px;
+        line-height: 1;
+        border-radius: 4px;
+        cursor: pointer;
+        background: @successColor;
+        color: #ffffff;
+        outline: none;
+        &:active{
+            opacity: .8;
         }
+      }
+      button.confirm-center-cancel {
+        background: #ffffff;
+        border: 1px solid @borderColor;
+        color: @mainColor2;
+      }
     }
+  }
 }
